--- a/config/database.yml
+++ b/config/database.yml
@@ -1,3 +1,12 @@
+production:
+  adapter: postgresql
+  database: trivia_production
+  username: ryanclark
+  password: butterd0g
+  host: localhost
+  pool: 5
+  timeout: 5000
+  socket: /tmp/pgsql_socket
 
 development:
   adapter: postgresql
