--- a/config/database.yml
+++ b/config/database.yml
@@ -7,3 +7,27 @@ development:
   pool: 5
   timeout: 5000
   socket: /tmp/pgsql_socket
+
+test: &test
+  adapter: postgresql
+  database: trivia_test
+  username: ryanclark
+  password: butterd0g
+  host: localhost
+  pool: 5
+  timeout: 5000
+  socket: /tmp/pgsql_socket
+  min_messages: WARNING
+
+cucumber:
+  <<: *test
+
+production:
+  adapter: postgresql
+  database: trivia_develpoment
+  username: ryanclark
+  password: butterd0g
+  host: localhost
+  pool: 5
+  timeout: 5000
+  socket: /tmp/pgsql_socket
