--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,19 +1,21 @@
 ---
 rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
-application.js: application-87dd004dc21953e1ac676af0b1e7413d.js
-application/index.js: application-87dd004dc21953e1ac676af0b1e7413d.js
-application.css: application-1cdddc69f41d791d4f51ee6e10c69816.css
-application/index.css: application-1cdddc69f41d791d4f51ee6e10c69816.css
-fontawesome-webfont.eot: fontawesome-webfont-635909f146e208b3509acdf3b154bf0d.eot
-fontawesome-webfont/index.eot: fontawesome-webfont-635909f146e208b3509acdf3b154bf0d.eot
-fontawesome-webfont.ttf: fontawesome-webfont-6a4e273908b7e43d9e479d38b8ae5957.ttf
-fontawesome-webfont/index.ttf: fontawesome-webfont-6a4e273908b7e43d9e479d38b8ae5957.ttf
-fontawesome-webfont.woff: fontawesome-webfont-a0fbd98b232e7e1ef9cdaad813b26eb3.woff
-fontawesome-webfont/index.woff: fontawesome-webfont-a0fbd98b232e7e1ef9cdaad813b26eb3.woff
+application.js: application-0d292e924c8b7aff700fd28853619266.js
+application/index.js: application-0d292e924c8b7aff700fd28853619266.js
+application.css: application-c1aa45555edb44b6fcf607c13515fc7f.css
+application/index.css: application-c1aa45555edb44b6fcf607c13515fc7f.css
+fontawesome-webfont.eot: fontawesome-webfont-009f6d1f667cc42c25e712ab3429cbc7.eot
+fontawesome-webfont/index.eot: fontawesome-webfont-009f6d1f667cc42c25e712ab3429cbc7.eot
+fontawesome-webfont.svg: fontawesome-webfont-f1c2889911d212e1403b68eabc1a3a56.svg
+fontawesome-webfont/index.svg: fontawesome-webfont-f1c2889911d212e1403b68eabc1a3a56.svg
+fontawesome-webfont.ttf: fontawesome-webfont-fb7a72c810ec644f3c26dcca68638308.ttf
+fontawesome-webfont/index.ttf: fontawesome-webfont-fb7a72c810ec644f3c26dcca68638308.ttf
+fontawesome-webfont.woff: fontawesome-webfont-b4d67f1e5651506c3e80d842ee67d6ba.woff
+fontawesome-webfont/index.woff: fontawesome-webfont-b4d67f1e5651506c3e80d842ee67d6ba.woff
 twitter/bootstrap/glyphicons-halflings-white.png: twitter/bootstrap/glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 twitter/bootstrap/glyphicons-halflings-white/index.png: twitter/bootstrap/glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 twitter/bootstrap/glyphicons-halflings.png: twitter/bootstrap/glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
 twitter/bootstrap/glyphicons-halflings/index.png: twitter/bootstrap/glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
-jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
-jquery/index.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
+jquery.min.map: jquery.min-388372ef65cc311f6a3df4a6ceac8d22.map
+jquery/index.min.map: jquery.min-388372ef65cc311f6a3df4a6ceac8d22.map
