--- a/circle.yml
+++ b/circle.yml
@@ -2,4 +2,4 @@ deployment:
   production:
     branch: skylight
     commands:
-      - curl ENV[DEPLOYMENT_URL]
+      - curl <% ENV['DEPLOYMENT_URL'] %>
