fix deploy command

--- a/circle.yml
+++ b/circle.yml
@@ -2,4 +2,4 @@ deployment:
   production:
     branch: skylight
     commands:
-      - curl <% ENV['DEPLOYMENT_URL'] %>
+      - curl $DEPLOYMENT_URL
