--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,7 @@
 development:
   adapter: postgresql
   database: trivia_develpoment
-  username: ryanclark
-  password: butterd0g
+  username: ryan
   host: localhost
   pool: 5
   timeout: 5000
@@ -11,8 +10,7 @@ development:
 test: &test
   adapter: postgresql
   database: trivia_test
-  username: ryanclark
-  password: butterd0g
+  username: ryan
   host: localhost
   pool: 5
   timeout: 5000
@@ -25,8 +23,7 @@ cucumber:
 production:
   adapter: postgresql
   database: trivia_develpoment
-  username: ryanclark
-  password: butterd0g
+  username: ryan
   host: localhost
   pool: 5
   timeout: 5000
